--- a/Notebooks/analysis.ipynb
+++ b/Notebooks/analysis.ipynb
@@ -19,8 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(r'C:\\Users\\AANCHAL\\Pictures\\Infytrix\\Data\\final_data.csv')\n",
-    "df2 = pd.read_csv(r'C:\\Users\\AANCHAL\\Pictures\\Infytrix\\Data\\category_metrics.csv')"
+    "df1 = pd.read_csv('Data\final_data.csv')\n",
+    "df2 = pd.read_csv('Data\category_metrics.csv')"
    ]
   },
   {
