--- a/Notebooks/analysis.ipynb
+++ b/Notebooks/analysis.ipynb
@@ -19,8 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(r'Data\final_data.csv')\n",
-    "df2 = pd.read_csv(r'Data\category_metrics.csv')"
+    "df1 = pd.read_csv(r'Data/final_data.csv')\n",
+    "df2 = pd.read_csv(r'Data/category_metrics.csv')"
    ]
   },
   {
